# CompSci

./: .gitignore  .gitmodules  README.md
labs/AutomataTheory/lab1/: flowchart.drawio  report.tex  task-lab1.md
labs/AutomataTheory/lab1/code/: CMakeLists.txt  CMakePresets.json  README-CrossCompilation.md  README.md  build-cross.sh  toolchain-linux.cmake  toolchain-windows.cmake
labs/AutomataTheory/lab1/code/src/: colordialog.cpp  colordialog.h  initialfilldialog.cpp  initialfilldialog.h  main.cpp  mainwindow.cpp  mainwindow.h  options.c  pyramid.cpp  pyramid.h  pyramidwidget.cpp  pyramidwidget.h  simulation.cpp  simulation.h  user_interface.c  user_interface.h
labs/AutomataTheory/lab1/code/src/game/: game.c  game.h  ui_game.c  ui_game.h
labs/AutomataTheory/lab1/code/src/sys/: file_dialog_zenity.c
labs/AutomataTheory/lab1/code/src/ui/: components.c  dialogs.c  dialogs.h  topbar.c
labs/AutomataTheory/lab2/: description.md  flowchart.drawio  report.tex  rps_bot_description.html  rps_bot_description.md  task.md
labs/AutomataTheory/lab3/: flowchart.drawio  report.tex  rules.md  Описание.html  Описание.md  страт. и расст.md
labs/CompMath/: questions_and_answers.md  requirements.txt  summary.md
labs/CompMath/lab1/: raw.ipynb
labs/CompMath/lab2/: raw.ipynb
labs/CompMath/lab3/: raw.ipynb
labs/CompMath/lab4/: raw.ipynb
labs/CompSCi/lab2/: main.aux  main.fdb_latexmk  main.fls  main.out  zadania.txt
labs/CompSCi/lab3/: .$1.drawio.bkp  1 copy.drawio  main.aux  main.fdb_latexmk  main.fls
labs/CompSCi/lab4/: .$4_flowchart.drawio.bkp  compscilab4.fdb_latexmk  compscilab4.fls
labs/CompSCi/lab5/: .$5_flowchart.drawio.bkp  5_flowchart.drawio  compscilab5.aux  compscilab5.fdb_latexmk  compscilab5.fls  compscilab5.tex
labs/CompSCi/lab6/: .$flowchart.drawio.bkp  lab6.aux  lab6.fdb_latexmk  lab6.fls  lab6.tex
labs/CompSCi/lab7/: 4bit_16bit_adder.circ  4bit_mult.circ  report.aux  report.fdb_latexmk  report.fls
labs/CompSCi/lab8/: 1.circ  2-3.circ  4-6.circ  report.aux  report.fdb_latexmk  report.fls
labs/CompSci/lab2/: main.tex
labs/CompSci/lab3/: main.tex
labs/CompSci/lab4/: 4_flowchart.drawio  compscilab4.tex  задания.md
labs/CompSci/lab6/: flowchart.drawio
labs/CompSci/lab7/: 1_fns.circ  4.md  report.tex  table.md
labs/CompSci/lab8/: report.tex
labs/CompSciSem2/lab1/: report.tex
labs/CompSciSem2/lab2/: report.tex
labs/DB/: Containerfile
labs/DB/lab1/: Containerfile  report.tex  test_db_linked_tables.sql
labs/DB/lab2_1/: report.tex
labs/DB/lab2_2/: report.tex
labs/DB/lab3/: report.tex
labs/DB/lab4/: report.tex
labs/DB/lab4/code/: CMakeLists.txt
labs/DB/lab4/code/src/: database.cpp  main.cpp
labs/DB/lab5/: report.tex
labs/DigitalСircuitry/: test.circ
labs/DigitalСircuitry/adder/: circuit.circ
labs/DigitalСircuitry/comb_synthesis/: report.tex
labs/DigitalСircuitry/comparator/: circuit.circ  report.tex  schemes.drawio
labs/DigitalСircuitry/counter/: circuit.circ  report.tex
labs/DigitalСircuitry/course/: TechSpecs.md
labs/DigitalСircuitry/descipher_demux/: report.tex  schemes.drawio
labs/DigitalСircuitry/k_counter/: circuit.circ  report.tex
labs/DigitalСircuitry/lab1/: report.tex  schemes.drawio
labs/DigitalСircuitry/lab2/: circuit.circ  report.tex  schemes.drawio
labs/DigitalСircuitry/lab3/: circuit.circ  report.tex
labs/DigitalСircuitry/lab4/: report.tex  schemes.drawio
labs/DigitalСircuitry/register/: report.tex
labs/DigitalСircuitry/shift_register/: report.tex  schemes.drawio
labs/DigitalСircuitry/trigger_synthesis/: report.tex
labs/DiscreteMath/lab1/: .$flowchart.drawio.bkp  DiscreteMathLab1.aux  DiscreteMathLab1.fdb_latexmk  DiscreteMathLab1.fls  DiscreteMathLab1.tex  flowchart.drawio  report.tex
labs/DiscreteMath/lab2/: Cargo.toml  README.md  flowchart.drawio  graph.dot  report.tex
labs/DiscreteMath/lab3/: README.md  flowchart.drawio  graph.dot  input.txt  report.tex
labs/DiscreteMath/lab4/: flowchart.drawio  report.tex
labs/DiscreteMath/lab5/: README.md  flowchart.drawio  report.tex
labs/DiscreteMath/lab6/: flowchart.drawio  report.tex
labs/OCHOBbI/lab2/: lab2.aux  lab2.fdb_latexmk  lab2.fls  lab2.tex  lab2.toc
labs/OCHOBbI/lab3/: lab3.fdb_latexmk  lab3.fls  lab3.tex
labs/OCHOBbI/lab4/: tables.aux  tables.fdb_latexmk  tables.fls  tables.tex
labs/OOP/: docker-compose.yml  tasks.md
labs/OOP/db-init/: init.sql
labs/OOP/lab1/: .gitignore  classes_tables.tex  lgrenc.def  out.txt  report.tex
labs/OOP/lab2/: .gitignore  classes_tables.tex  report.tex
labs/OOP/lab3/: .gitignore  report.tex
labs/OOP/lab4/: .gitignore  docker-compose.yml  report.tex
labs/OOP/web/: package.json
labs/Optim/lab1/: task.md
labs/Optim/lab2/: input.txt  task.md  доп.txt  основная часть.txt
labs/Physics/lab1/: report.tex
labs/Physics/lab2/: main.py  report.tex
labs/Proga/lab1/: .$Diagrams(bkp).drawio.bkp  Diagrams(bkp).drawio  Diagrams(bkp2).drawio  Diagrams.drawio  Lab1.aux  Lab1.fdb_latexmk  Lab1.fls  Lab1.tex
labs/Proga/lab2/: .$18.drawio.bkp  .$flowchart.drawio.bkp  18.drawio  flowchart.drawio  lab2.aux  lab2.fdb_latexmk  lab2.fls  lab2.tex
labs/Proga/lab3/: .$lowchart.drawio.bkp  lowchart.drawio  torture.aux  torture.fdb_latexmk  torture.fls  torture.tex  Задание.md
labs/Proga/lab9/ternary_tiles/: meson.build
labs/Proga/lab9/ternary_tiles/include/Game/: BalancedTernary.hpp  GameBoard.hpp  Renderer.hpp  Tile.hpp
labs/Proga/lab9/ternary_tiles/src/: main.cpp
labs/Proga/lab9/ternary_tiles/src/Game/: BalancedTernary.cpp  GameBoard.cpp  Renderer.cpp
labs/ProgrammingTechnology/lab4/code/: CMakeLists.txt
labs/ProgrammingTechnology/lab4/code/libcrypto/: crypto.cpp  crypto.h  hash.S
labs/ProgrammingTechnology/lab4/code/libdialogs/: database.cpp  database.h  dialogs.cpp  dialogs.h
labs/ProgrammingTechnology/lab4/code/main/: main.cpp  mainwindow.cpp  mainwindow.h
lect/: math.md
lect/CompSci/: bool_30.10.md
lect/DiscreteMath/: 04.03.md  18.02.md  sieve_of_eratosthenes.c
lect/Proga/: 04.03.md  18.02.md  User_types_12.11.md  dyn_mem_and_pointers_2_12.md  ex.md
(+403 files in other folders)
